--- a/baseStatic/css/style-desktop.css
+++ b/baseStatic/css/style-desktop.css
@@ -621,4 +621,16 @@
 			padding: 1.5em 4em 1.5em 4em;
 			line-height: 1em;
 			font-size: 0.8em;
+
+		}
+
+
+		#login{
+			font-size: 0.7em;
+			float:right;
+		}
+		#login a{
+			text-decoration: none;
+			color: rgba(255,255,255,0.75);
+			letter-spacing:0.15em;
 		}
