--- a/baseBusiness/src/main/webapp/css/style-desktop.css
+++ b/baseBusiness/src/main/webapp/css/style-desktop.css
@@ -31,15 +31,15 @@
 	}
 
 	/* Tables */
-
+	
 		table
 		{
 		}
-
+		
 			table.style1
 			{
 			}
-
+			
 				table.style1 thead
 				{
 					font-size: 0.85em;
@@ -47,26 +47,26 @@
 				}
 
 	/* Buttons */
-
+		
 		.button
 		{
 			font-size: 0.85em;
 			letter-spacing: 2px;
 			padding: 0.85em 2.75em 0.85em 2.75em;
 		}
-
+		
 	/* Lists */
 
 		ul.actions
 		{
 		}
-
+		
 			ul.actions li
 			{
 				display: inline-block;
 				margin-left: 1em;
 			}
-
+			
 			ul.actions li:first-child
 			{
 				margin-left: 0;
@@ -89,7 +89,7 @@
 	.is-post
 	{
 	}
-
+	
 		.no-sidebar .is-post > header
 		{
 			text-align: center;
@@ -98,11 +98,11 @@
 	.is-feature
 	{
 	}
-
+	
 	.is-excerpt
 	{
 	}
-
+	
 		.is-excerpt .date
 		{
 			display: inline-block;
@@ -111,7 +111,7 @@
 			padding: 0.25em 1em 0.25em 1em;
 			margin: 0 0 2.5em 0;
 		}
-
+	
 	.is-highlight
 	{
 	}
@@ -128,17 +128,17 @@
 	{
 		padding: 6em 0 6em 0;
 	}
-
+	
 	#banner-wrapper
 	{
 		padding: 3em 0 3em 0;
 	}
-
+	
 	#main-wrapper
 	{
 		padding: 6em 0 6em 0;
 	}
-
+	
 	#footer-wrapper
 	{
 		padding: 6em 0 8em 0;
@@ -152,20 +152,20 @@
 	{
 		padding: 14em 0 7em 0;
 	}
-
+	
 		#header h1
 		{
 			font-size: 3em;
 			letter-spacing: 13px;
 		}
-
+		
 		#header p
 		{
 			margin: 2.5em 0 0 0;
 			font-size: 0.85em;
 			letter-spacing: 3px;
 		}
-        #login
+ 		#login
         {
             width:50px;
             height:50px;
@@ -178,6 +178,38 @@
             border-bottom-right-radius:0.5em;
             border-bottom-left-radius:0.5em;
         }
+        #login .glyphicons i:before
+        {
+        	left: 0.2em;
+        	color: #e4e4e4
+        }
+        .login-form{
+        	float: left;
+        	margin-left: 2.3em;
+        }
+        .m-wrap-login{
+        	width:250px;
+        	height: 30px;
+        	margin-top: 1em; 
+        }
+        .login-userimg{
+        	float: right;
+        	width:110px;
+			height: 110px;   
+			margin-right: 5em;
+        }
+        .m-wrap-loginImg{
+			width:100px;
+			height: 100px; 
+			border-radius:50% !important;
+			-moz-border-radius:50%  !important;
+			
+		}
+        input.m-wrap-login:focus
+		{
+		    outline:none;
+		    border:green solid 0.2px;
+		}
 /*********************************************************************************/
 /* Nav                                                                           */
 /*********************************************************************************/
@@ -195,7 +227,7 @@
 			display: inline-block;
 			padding-right: 2em;
 		}
-
+		
 			#nav > ul > li:last-child
 			{
 				padding-right: 0;
@@ -216,7 +248,7 @@
 			{
 				display: none;
 			}
-
+	
 	.dropotron
 	{
 		text-align: left;
@@ -228,7 +260,7 @@
 		padding: 0.75em 0 0.5em 0;
 		min-width: 12em;
 	}
-
+	
 		.dropotron-level-0
 		{
 			margin-top: 1.5em;
@@ -279,7 +311,7 @@
 			border-top: 0;
 			padding-top: 0;
 		}
-
+		
 		.dropotron li:hover > span,
 		.dropotron li:hover > a
 		{
@@ -291,23 +323,23 @@
 			transition: color 0.25s ease-in-out, border-bottom-color 0.25s ease-in-out;
 		}
 
-
+	
 /*********************************************************************************/
 /* Banner                                                                        */
 /*********************************************************************************/
-
+	
 	#banner
 	{
 		padding: 10em 0 10em 0;
 	}
-
+	
 		#banner p
 		{
 			font-size: 2em;
 			line-height: 1.5em;
 			letter-spacing: 4px;
 		}
-
+		
 		#banner:before,
 		#banner:after
 		{
@@ -321,12 +353,12 @@
 			background: url('images/bracket.svg');
 			opacity: 0.15;
 		}
-
+		
 		#banner:before
 		{
 			left: 0;
 		}
-
+		
 		#banner:after
 		{
 			right: 0;
@@ -336,11 +368,11 @@
 			-ms-transform: scaleX(-1);
 			transform: scaleX(-1);
 		}
-
+		
 /*********************************************************************************/
 /* Content                                                                       */
 /*********************************************************************************/
-
+	
 	#content
 	{
 	}
@@ -351,18 +383,18 @@
 			margin: 5em 0 0 0;
 			padding: 5em 0 0 0;
 		}
-
+		
 		#content > section:first-child,
 		#content > article:first-child
 		{
 			margin: 0;
 			padding: 0;
 		}
-
+	
 /*********************************************************************************/
 /* Sidebar                                                                       */
 /*********************************************************************************/
-
+	
 	#sidebar
 	{
 	}
@@ -373,7 +405,7 @@
 			margin: 5em 0 0 0;
 			padding: 5em 0 0 0;
 		}
-
+		
 		#sidebar > section:first-child,
 		#sidebar > article:first-child
 		{
